terraform/modules/sg/bastion_sg.tf
###################################
## SG bastion host ###
###################################
resource "aws_security_group" "bastion-security-group" {
  name        = "bastion Security Group"
  description = "Enable ssh access on port 22"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "bastion Security group"
  }
}
