terraform/modules/sg/web_alb_sg.tf
###################################
## SG Application Load Balancer ###
###################################
resource "aws_security_group" "web-alb-security-group" {
  name        = "ALB Security Group"
  description = "Enable http access on port 80"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web ALB Security group"
  }
}
